@@ -60,7 +60,7 @@ POST_UNINSTALL = :
 host_alias = i686-pc-linux-gnu
 host_triplet = i686-pc-linux-gnu
 AS = 
-CC = gcc
+CC = gcc -ggdb
 DLLTOOL = 
 LD = /usr/bin/ld
 LEX = @LEX@
